@@ -122,10 +122,10 @@ public class DynamicSyncTest extends AbstractDynamicTest {
         assertNotNull(user);
 
         // assert membership
-        Set<String> expDeclaredGroupIds = ImmutableSet.of("a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
+        Set<String> expDeclaredGroupIds = Set.of("a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
         assertExpectedIds(expDeclaredGroupIds, user.declaredMemberOf());
 
-        Set<String> expGroupIds = ImmutableSet.of(BASE_ID, BASE2_ID, "a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
+        Set<String> expGroupIds = Set.of(BASE_ID, BASE2_ID, "a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
         assertExpectedIds(expGroupIds, user.memberOf());
 
         // assert groups
@@ -152,10 +152,10 @@ public class DynamicSyncTest extends AbstractDynamicTest {
         assertNotNull(user);
 
         // assert membership
-        Set<String> expDeclaredGroupIds = ImmutableSet.of("a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
+        Set<String> expDeclaredGroupIds = Set.of("a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
         assertExpectedIds(expDeclaredGroupIds, user.declaredMemberOf());
 
-        Set<String> expGroupIds = ImmutableSet.of(BASE_ID, BASE2_ID, BASE3_ID, BASE4_ID, "a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
+        Set<String> expGroupIds = Set.of(BASE_ID, BASE2_ID, BASE3_ID, BASE4_ID, "a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
         assertExpectedIds(expGroupIds, user.memberOf());
 
         // assert groups
@@ -181,10 +181,10 @@ public class DynamicSyncTest extends AbstractDynamicTest {
         assertNotNull(user);
 
         // assert membership
-        Set<String> expDeclaredGroupIds = ImmutableSet.of("a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
+        Set<String> expDeclaredGroupIds = Set.of("a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
         assertExpectedIds(expDeclaredGroupIds, user.declaredMemberOf());
 
-        Set<String> expGroupIds = ImmutableSet.of(BASE_ID, BASE2_ID, BASE3_ID, BASE4_ID, "a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
+        Set<String> expGroupIds = Set.of(BASE_ID, BASE2_ID, BASE3_ID, BASE4_ID, "a", "b", "c", "aa", "aaa", AUTO_GROUPS, AUTO_USERS, EveryonePrincipal.NAME);
         assertExpectedIds(expGroupIds, user.memberOf());
 
         // assert groups
@@ -207,7 +207,7 @@ public class DynamicSyncTest extends AbstractDynamicTest {
         
         assertExpectedIds(Collections.singleton(USER_ID), aGroup.getDeclaredMembers(), aGroup.getMembers());
         
-        Set<String> expectedIds = ImmutableSet.of(AUTO_GROUPS, BASE_ID, EveryonePrincipal.NAME);
+        Set<String> expectedIds = Set.of(AUTO_GROUPS, BASE_ID, EveryonePrincipal.NAME);
         assertExpectedIds(expectedIds, aGroup.declaredMemberOf(), aGroup.memberOf());
     }
 
@@ -220,7 +220,7 @@ public class DynamicSyncTest extends AbstractDynamicTest {
         Group aGroup = userManager.getAuthorizable("a", Group.class);
 
         // verify group 'autoForGroups'
-        Set<String> expMemberIds = ImmutableSet.of("a", "b", "c", "aa", "aaa", USER_ID);
+        Set<String> expMemberIds = Set.of("a", "b", "c", "aa", "aaa", USER_ID);
         assertExpectedIds(expMemberIds, autoForGroups.getDeclaredMembers(), autoForGroups.getMembers());
         assertIsMember(autoForGroups, true, user, aGroup);
         assertIsMember(autoForGroups, false, user, aGroup);
@@ -236,7 +236,7 @@ public class DynamicSyncTest extends AbstractDynamicTest {
         Group aGroup = userManager.getAuthorizable("a", Group.class);
 
         // verify group 'autoForUsers'
-        Set<String> expMemberIds = ImmutableSet.of(USER_ID);
+        Set<String> expMemberIds = Set.of(USER_ID);
         assertExpectedIds(expMemberIds, autoForUsers.getDeclaredMembers(), autoForUsers.getMembers());
         assertTrue(autoForUsers.isMember(user));
 
@@ -252,11 +252,11 @@ public class DynamicSyncTest extends AbstractDynamicTest {
         Authorizable user = userManager.getAuthorizable(USER_ID);
 
         // verify group 'base'
-        Set<String> expDeclaredMemberIds = ImmutableSet.of(AUTO_GROUPS, AUTO_USERS, "a", "b");
+        Set<String> expDeclaredMemberIds = Set.of(AUTO_GROUPS, AUTO_USERS, "a", "b");
         assertExpectedIds(expDeclaredMemberIds, base.getDeclaredMembers());
         assertFalse(base.isDeclaredMember(user));
 
-        Set<String> expMemberIds = ImmutableSet.of(USER_ID, AUTO_GROUPS, AUTO_USERS, "a", "b", "c", "aa", "aaa");
+        Set<String> expMemberIds = Set.of(USER_ID, AUTO_GROUPS, AUTO_USERS, "a", "b", "c", "aa", "aaa");
        assertExpectedIds(expMemberIds, base.getMembers());
         assertTrue(base.isMember(user));
     }
@@ -269,12 +269,12 @@ public class DynamicSyncTest extends AbstractDynamicTest {
         Authorizable user = userManager.getAuthorizable(USER_ID);
         
         // verify group 'base2'    
-        Set<String> expDeclaredMemberIds = ImmutableSet.of(AUTO_USERS);
+        Set<String> expDeclaredMemberIds = Set.of(AUTO_USERS);
         assertExpectedIds(expDeclaredMemberIds, base2.getDeclaredMembers());
 
         assertFalse(base2.isDeclaredMember(user));
 
-        Set<String> expMemberIds = ImmutableSet.of(USER_ID, AUTO_USERS);
+        Set<String> expMemberIds = Set.of(USER_ID, AUTO_USERS);
         assertExpectedIds(expMemberIds, base2.getMembers());
         assertTrue(base2.isMember(user));
     }
